force-app/main/default/objects/FEC_SystemSetting__mdt/FEC_SystemSetting__mdt.object-meta.xml
<CustomObject>
    <label>FEC System Setting</label>
    <pluralLabel>FEC System Settings</pluralLabel>
</CustomObject>