force-app/main/default/objects/FEC_SystemSetting__mdt/fields/FEC_ChatHubEnabled__c.field-meta.xml
<CustomField>
    <fullName>FEC_ChatHubEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ChatHubEnabled</label>
    <type>Checkbox</type>
</CustomField>