force-app/main/default/objects/FEC_SystemSetting__mdt/fields/FEC_ChatHubEncryptKey__c.field-meta.xml
<CustomField>
    <fullName>FEC_ChatHubEncryptKey__c</fullName>
    <label>ChatHubEncryptKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>