force-app/main/default/objects/FEC_SystemSetting__mdt/fields/FEC_ChatHubStaticSalt__c.field-meta.xml
<CustomField>
    <fullName>FEC_ChatHubStaticSalt__c</fullName>
    <label>ChatHubStaticSalt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>