force-app/main/default/objects/FEC_SystemSetting__mdt/fields/FEC_ChatHubURL__c.field-meta.xml
<CustomField>
    <fullName>FEC_ChatHubURL__c</fullName>
    <label>ChatHubURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>